# StructuralSearch

./: README.md  optuna_v.py  vcoptSA.py
lattice_GA/: .clangd  .gitignore  CMakeLists.txt  plot.py  plotN.py
lattice_GA/include/: generator.hpp  lattice.hpp  lattice_newton.hpp
lattice_GA/src/: lattice.cpp  main.cpp  shader.metal
lattice_SA/: CMakeLists.txt  plotN.py
lattice_SA/include/: lattice.hpp  lattice_newton.hpp
lattice_SA/include/autodiff/: constant.hpp  single_variable.hpp  variable.hpp
lattice_SA/src/: main.cpp
